--- a/quiz.html
+++ b/quiz.html
@@ -2,30 +2,27 @@
 <html>
 <head>
   <title>Quiz</title>
-</head>
-<body>
 
-<h2 id="question">Waiting for admin...</h2>
-<div id="options"></div>
-
-<script src="data.js"></script>
-<script>
-window.addEventListener("storage", loadQuestion);
-
-function loadQuestion() {
-  let qno = localStorage.getItem("currentQuestion");
-  if (qno === null) return;
-
-  let q = questions[qno];
-  document.getElementById("question").innerText = q.q;
-
-  let html = "";
-  q.options.forEach(o => {
-    html += `<button>${o}</button><br>`;
-  });
-  document.getElementById("options").innerHTML = html;
-}
-</script>
-
-</body>
-</html>
+  <style>
+    body {
+      font-family: Arial;
+      background-color: #f2f6ff;
+      text-align: center;
+    }
+    .box {
+      background: white;
+      width: 60%;
+      margin: auto;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px gray;
+    }
+    button {
+      width: 60%;
+      padding: 10px;
+      margin: 5px;
+      font-size: 16px;
+      background-color: #4caf50;
+      color: white;
+      border: none;
+      border-ra
