--- a/admin.html
+++ b/admin.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Admin</title>
+  <title>Admin Panel</title>
+
+  <style>
+    body {
+      font-family: Arial;
+      background-color: #fff3e0;
+      text-align: center;
+    }
+    .panel {
+      background: white;
+      width: 50%;
+      margin: auto;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px gray;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      background-color: #ff9800;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  </style>
 </head>
+
 <body>
 
-<h2>Admin Control Board</h2>
-<button onclick="nextQ()">Next Question</button>
-
-<p>Current Question: <span id="qno">0</span></p>
+<div class="panel">
+  <h2>Admin Control Board</h2>
+  <button onclick="nextQ()">Next Question</button>
+  <p>Current Question: <span id="qno">0</span></p>
+</div>
 
 <script src="data.js"></script>
 <script>
