--- a/admin.html
+++ b/admin.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Admin</title>
+  <title>Admin Panel</title>
+  <style>
+    body { font-family: Arial; text-align: center; background: #fff3e0; }
+    .panel { background:white; width:50%; margin:auto; padding:20px; border-radius:10px; box-shadow:0 0 10px gray; }
+    button { padding:10px 20px; font-size:16px; background:#ff9800; color:white; border:none; border-radius:5px; cursor:pointer; }
+  </style>
 </head>
+<body>
 
-<body style="font-family:Arial; text-align:center;">
+<div class="panel">
+  <h2>Admin Control Board</h2>
+  <button onclick="nextQ()">Next Question</button>
+  <p>Current Question Number: <span id="qno">0</span></p>
+</div>
 
-  <h1>ADMIN CONTROL BOARD</h1>
+<script src="data.js"></script>
+<script>
+let qno = 0;
 
-  <button onclick="nextQ()" style="font-size:20px;">
-    NEXT QUESTION
-  </button>
-
-  <p>Current Question Number:
-    <span id="qno">0</span>
-  </p>
-
-  <script src="data.js"></script>
-  <script>
-    let qno = 0;
-
-    function nextQ() {
-      localStorage.setItem("currentQuestion", qno);
-      document.getElementById("qno").innerText = qno;
-      qno++;
-    }
-  </script>
+// Fix: store the current question BEFORE increment
+function nextQ() {
+  if (qno >= questions.length) return;
+  localStorage.setItem("currentQuestion", qno);  // send to quiz page
+  document.getElementById("qno").innerText = qno;
+  qno++;
+}
+</script>
 
 </body>
 </html>
